[project]
name = "sigchi-pdf-downloader"
version = "0.1.0"
description = "Bulk-download PDFs for any SIGCHI event from ACM DL via Playwright + real Chrome."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.48",
    "playwright-stealth>=1.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["download_pdfs.py"]
